# highfleet-decoder

./: .commitlintrc.json  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  PLAN.md  Pipfile  README.md  capture_region.json  highfleet-decoder.py  highfleet_decoder.py  known_english.txt  pyproject.toml
src/: cli.py  crack.py  globals.py  message.py  support.py
tests/: test_crack.py  test_highfleet-decoder.py  test_support.py
